tests/ElabConfig.lean.expected
tests/ElabConfig.lean:12:22: error: 'noSuchOption' is not a field of structure 'Aesop.Options'
tests/ElabConfig.lean:15:26: error: 'noSuchOption' is not a field of structure 'Lean.Meta.Simp.Config'
tests/ElabConfig.lean:15:8: error: cannot evaluate code because 'sorryAx' uses 'sorry' and/or contains errors
